--- a/src/Components/DarkModeButton/DarkModeButton.css
+++ b/src/Components/DarkModeButton/DarkModeButton.css
@@ -7,7 +7,7 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    font-size: 1.5rem;
+    font-size: 1rem;
     transition: opacity 0.3s ease-in-out;
   }
   
@@ -48,3 +48,9 @@
   .toggle-container input[type="checkbox"]:checked + .toggle .background {
     background-color: #d9d9d9;
   }
+
+.toggle {
+    position: absolute;
+bottom: 6px;
+
+}
