--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,5 +1,7 @@
 header {
     display: flex;
+    justify-content: space-between;
+    margin: 0 30px;
 }
 
 #sea-angel {
@@ -7,4 +9,11 @@ header {
     height: 100px;
     border-radius: 50px;
     object-fit: cover;
+    border: 1px solid #646cff;
+    box-shadow: 1px 0px 1em #213547;
+}
+
+nav {
+    display: flex;
+    gap: 10px;
 }
