changing design wip

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,26 +1,37 @@
-p ,#intro h1 {
-color: rgba(0, 0, 0, 0.822);
+p,
+#intro h1 {
+  color: rgba(0, 0, 0, 0.822);
+}
+
+p {
+    color: #213547;
 }
 
 #intro h1 {
-    text-shadow: 1px 0px 1em #213547;
-    margin: 0;
+  text-shadow: 1px 0px 1em #213547;
+  margin: 0;
 }
 
 #intro {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  max-width: 400px;
 }
 
 #home-main {
-    padding: 30px;
+  display: flex;
 }
 
 #bio {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  max-width: 400px;
+  align-items: center;
+  align-self: center;
 }
 
 button {
-    width: max-content;
+  width: max-content;
 }
