--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  font-family: PlayFair Display, Inter, system-ui, Avenir, Helvetica, Arial,
-    sans-serif;
+  font-family: PlayFair Display, 'Cormorant Unicase', Inter, system-ui, Avenir, Helvetica, Arial,
+    serif, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -34,10 +34,25 @@ body {
 h1 {
   font-size: 2.5em;
   line-height: 1.1;
+  font-family: 'Cormorant Unicase';
+}
+
+h2 {
+  font-size: 4.3em;
+  line-height: 1.1;
+  font-family: 'Cormorant Unicase';
+  margin: 0;
+}
+
+h3 {
+  font-size: 1.5em;
+  line-height: 1.1;
+  font-family: 'Cormorant Unicase';
+  margin: 0;
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 50px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -71,11 +86,16 @@ button:focus-visible {
 /*mes règles*/
 /*avant:fontfamiy Inter, Avenir*/
 /*jolies couleur : #646cff on hover assombrit: #535bf2;*/
-/*gris: C0C0C0 ->*/
+/*gris: C0C0C0
+bleu inset: 4A94D7
+avant box shadow : 213547 ->*/
+
+.main-card {
+  border: 1px solid #646cff;
+  box-shadow: inset 1px 0px 1em #4A94D7;
+  border-radius: 70px;
+}
 
 .page-content {
-  border: 1px solid #646cff;
-  box-shadow: 1px 0px 1em #213547;
-  margin: 0 30px;
-  border-radius: 70px;
+  margin-left: 70px;
 }
