--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,7 +2,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 20px 30px;
+    margin: 20px 40px 40px 40px;
 }
 
 #sea-angel {
