--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,25 +1,19 @@
-p,
-#intro h1 {
-  color: rgba(0, 0, 0, 0.822);
-}
 
 p {
     color: #213547;
 }
 
-#intro h1 {
+#intro h2 {
   text-shadow: 1px 0px 1em #213547;
-  margin: 0;
 }
 
 #intro {
   display: flex;
   flex-direction: column;
-  padding: 30px;
   max-width: 400px;
 }
 
-#home-main {
+.container {
   display: flex;
 }
 
@@ -34,4 +28,8 @@ p {
 
 button {
   width: max-content;
+}
+
+.middle-card {
+    flex-grow: 2;
 }
