--- a/src/index.css
+++ b/src/index.css
@@ -55,14 +55,18 @@ h3 {
 button {
   border-radius: 50px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #cbcbcb;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
+/*
+  padding: 0.6em 1.2em;
+*/
+
 button:hover {
   border-color: #646cff;
 }
