--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -1,6 +1,9 @@
-.project-img {
+.project-image {
   width: 200px;
   height: 200px;
+  object-fit: cover;
+  transition: scale 400ms;
+  border-radius: 5px;
 }
 
 .slide-container {
@@ -13,6 +16,17 @@
   gap: 30px;
 }
 
-.project-card:hover img {
-    filter: drop-shadow(0 0 0.75rem rgb(128, 243, 232))
+.project-card:hover {
+    filter: drop-shadow(0 0 0.75rem rgb(128, 243, 232));
+    scale: 110%;
+}
+
+.project-card {
+    border: 1px solid rgb(128,243,232);
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
+    box-shadow: inset 1px 0px 1em rgb(128, 243, 232);
 }
