--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,9 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  /*color: #646cff;*/
+  color:rgb(128,243,232);
+
   text-decoration: inherit;
 }
 a:hover {
