bubble position on hover fix

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -126,7 +126,7 @@ button {
 }
 
 .bottom-card:hover {
-  width: fit-content;
+  width: 100%;
 }
 
 #contact {
@@ -152,6 +152,7 @@ button {
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
   animation-play-state: running;
+  transition: transform 0.3s ease-in-out; /* Added */
 }
 
 .side-card:nth-child(1) {
@@ -222,7 +223,7 @@ button {
 
 .side-card:hover {
   animation-play-state: paused;
-  transform: translate(0);
+  transform: translate(0) !important;;
 }
 
 .tags {
