--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -9,15 +9,15 @@
 .slide-container {
   display: flex;
   padding: 30px;
-  overflow: hidden; /* Add this property */
-  position: relative;
+  overflow-x: scroll;
+  width: 100%;
 }
 
 .slide-wrapper {
   display: flex;
   gap: 30px;
-  transition: transform 0.5s ease-in-out; /* Add this property */
-  transform: translateX(0);
+  overflow-x: scroll;
+  width: 100%;
 }
 
 .project-card:hover {
@@ -33,4 +33,24 @@
     gap: 10px;
     padding: 24px;
     box-shadow: inset 1px 0px 1em rgb(128, 243, 232);
+}
+
+#next-button {
+    background-color: transparent;
+}
+
+.slide-container {
+    scrollbar-width: none;
+}
+
+
+/* hide scrollbar but allow scrolling */
+.slide-wrapper {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
+}
+
+.slide-wrapper::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
 }
