--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
 
 h2 {
@@ -117,3 +120,25 @@ body {
 /*sea angel colors
 #
 */
+
+/* Hide the scrollbar */
+
+body::-webkit-scrollbar {
+  width: 0px !important;
+  background-color: transparent;
+  display: none;
+}
+
+body::-webkit-scrollbar {
+  width: 0px;
+}
+
+/* Hide the scrollbar on IE / Edge */
+body {
+  -ms-overflow-style: none;
+}
+
+/* Hide the scrollbar on Firefox */
+html {
+  scrollbar-width: none;
+}
