--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -14,7 +14,6 @@ header {
     box-shadow: 1px 0px 1em #213547;
 }
 
-nav {
-    display: flex;
-    gap: 10px;
+.fa-house {
+    padding-right: 15px;
 }
