--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,10 @@ a:hover {
   filter: brightness(1.3);
 }
 
+#sea-angel-link:hover {
+  filter: brightness(1.1);
+}
+
 body {
   margin: 0;
   place-items: center;
