--- a/src/Pages/ProjectPopUp/ProjectPopUp.css
+++ b/src/Pages/ProjectPopUp/ProjectPopUp.css
@@ -1,11 +1,23 @@
 .project-content {
     margin: 50px 0 50px 0;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    border: 1px solid black;
+    max-width: fit-content;
 }
 
 .project-container {
     display: flex;
+    padding: 30px;
 }
 
 .project-image-project-page {
     width: 300px;
+}
+
+.close-button {
+    position: absolute;
+    right: 2%;
+    top: 2%;
 }
