--- a/src/Components/ProjectPopup/ProjectPopup.css
+++ b/src/Components/ProjectPopup/ProjectPopup.css
@@ -1,8 +1,14 @@
 .project-content {
-    margin: 50px 0 50px 0;
-    position: relative;
+    margin: 50px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    z-index: 999;
     border: 1px solid rgb(128, 243, 232);
     box-shadow: inset 1px 0px 1em rgb(128, 243, 232);
     max-width: fit-content;
@@ -12,16 +18,29 @@
 }
 
 .project-container {
+    position: relative;
+    max-width: 80%;
+    max-height: 80%;
+    background-color: #b7b7b7;
+    filter: brightness(1.2);
+    border-radius: 32px;
+    overflow: auto;
     display: flex;
-    padding: 30px;
 }
 
 .project-image-project-page {
     width: 50%;
+    height: auto;
+    max-height: 100%;
+    object-fit: contain;
 }
 
 .close-button {
     position: absolute;
     right: 2%;
     top: 2%;
+}
+
+.project-content h2 {
+    color: #213547;
 }
