--- a/src/Components/ProjectPopup/ProjectPopup.css
+++ b/src/Components/ProjectPopup/ProjectPopup.css
@@ -1,4 +1,4 @@
-.project-content {
+.popup-background {
     margin: 50px;
     position: fixed;
     top: 0;
@@ -26,6 +26,7 @@
     border-radius: 32px;
     overflow: auto;
     display: flex;
+    flex-direction: column;
 }
 
 .project-image-project-page {
@@ -39,8 +40,20 @@
     position: absolute;
     right: 2%;
     top: 2%;
+    font-size: 3rem;
+    color: #646cff;
+
 }
 
-.project-content h2 {
-    color: #213547;
+.close-button:hover {
+    color: #535bf2;
+    filter: brightness(1.2);
+}
+
+.popup-title {
+    color: #646cff;
+}
+
+.project-body {
+    display: flex;
 }
