carousel design wip

--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -12,8 +12,9 @@
   width: 100%;
 }
 
-#next-button {
+.slide-button {
     background-color: transparent;
+    color: white;
 }
 
 .slide-container {
