--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -250,4 +250,8 @@ button {
 .bottom-card {
   display: flex;
   flex-direction: column;
+  border: none;
+  box-shadow: none;
+  /*border-top: 1px solid #646cff;
+  border-radius: 0px;*/
 }
