--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,9 +1,9 @@
 .project-image {
     width: 200px;
-    aspect-ratio: 1/1;
+    height: 200px;
     object-fit: cover;
-    transition: scale 400ms;
-    border-radius: 120px;
+    transition: transform 400ms;
+    border-radius: 50%;
     object-position: top;
 }
 
