--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #F5F0F0;
   background-color: #cbcbcb;
 
   font-synthesis: none;
