--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -1,19 +1,20 @@
 .slide-container {
   display: flex;
-  overflow-x: scroll;
-  scrollbar-width: none;
-  overflow-y: hidden;
   padding-top: 32px;
   justify-content: center;
+
+  overflow: hidden;
 }
 
 .slide-wrapper {
   display: flex;
   gap: 30px;
-  overflow-x: scroll;
   width: 100%;
   align-items: flex-start;
   margin: 0 20px;
+  overflow-x: scroll;
+  scrollbar-width: none;
+  overflow-y: hidden;
 }
 
 .slide-button {
