mobile bubble sidecards ok

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -259,3 +259,15 @@ button {
 .tags {
   display: none;
 }
+
+/* mobile */
+
+@media (max-width: 768px) {
+  .side-card:hover {
+    position: relative;
+  }
+
+  .bottom-card {
+    padding: 0;
+  }
+}
