--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ a:hover {
 body {
   margin: 0;
   place-items: center;
-  min-width: 320px;
+  min-width: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
