--- a/src/Components/ProjectPopup/ProjectPopup.css
+++ b/src/Components/ProjectPopup/ProjectPopup.css
@@ -33,6 +33,7 @@
     height: auto;
     max-height: 100%;
     object-fit: contain;
+    border-radius: 24px;
 }
 
 .close-button {
@@ -55,4 +56,9 @@
 
 .project-body {
     display: flex;
+    padding: 20px 40px;
+}
+
+.popup-header {
+    flex-direction: column;
 }
