--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,6 +3,7 @@ header {
     justify-content: space-between;
     align-items: flex-start;
     margin: 20px 40px 56px 40px;
+
 }
 
 #sea-angel {
@@ -23,4 +24,8 @@ header {
 nav {
     display: flex;
     gap: 5px;
+}
+
+.nav-darkmode {
+    align-self: center;
 }
