--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,12 @@ a:hover {
   filter: brightness(1.3);
 }
 
+.nav2-link:hover {
+  filter: none;
+}
+
 #sea-angel-link:hover {
-  filter: brightness(1.1);
+  filter: none;
 }
 
 body {
