--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -15,10 +15,9 @@ p {
 .container {
   display: flex;
   justify-content: center;
-  margin: 50px 0 50px 0;
   align-items: center;
   position: relative;
-  height: min-content;
+  height: 100vh;
 }
 
 #bio {
@@ -50,7 +49,7 @@ button {
 .middle-card {
   position: absolute;
   left: 50%;
-  top: 20%;
+  top: 10%;
   transform: translateX(-50%);
   width: max-content;
   z-index: 0;
@@ -99,7 +98,7 @@ button {
 .left-card {
   position: absolute;
   left: 10%;
-  top: 50%;
+  top: 10%;
   z-index: 1;
 }
 
@@ -110,7 +109,7 @@ button {
 .right-card {
   position: absolute;
   right: 10%;
-  top: 50%;
+  top: 10%;
   z-index: 2;
 }
 
@@ -119,7 +118,14 @@ button {
 }
 
 #nav2 {
-  margin-top: 360px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start; 
+  align-items: flex-end; 
+  padding: 40px;
 }
 
 #contact {
