--- a/src/Components/ProjectPopup/ProjectPopup.css
+++ b/src/Components/ProjectPopup/ProjectPopup.css
@@ -62,6 +62,11 @@
 
 .project-content {
     display: flex;
+    color: #213547;
+}
+
+.features-list {
+    list-style-type: none;
 }
 
 .popup-header {
