--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,10 @@ a:hover {
   filter: none;
 }
 
+.nav3-link:hover {
+  filter: none;
+}
+
 #sea-angel-link:hover {
   filter: none;
 }
@@ -85,7 +89,7 @@ button:focus,
 button:focus-visible {
   filter:brightness(1.2)
 }
-
+/*
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -98,6 +102,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+*/
 
 /*mes règles*/
 /*avant:fontfamiy Inter, Avenir*/
