--- a/src/Components/ProjectPopup/ProjectPopup.css
+++ b/src/Components/ProjectPopup/ProjectPopup.css
@@ -1,78 +1,88 @@
 .popup-background {
-    margin: 50px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 999;
-    border: 1px solid rgb(128, 243, 232);
-    box-shadow: inset 1px 0px 1em rgb(128, 243, 232);
-    max-width: fit-content;
-    background-color: #b7b7b7;
-    border-radius: 32px;
+  margin: 50px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+  border: 1px solid rgb(128, 243, 232);
+  box-shadow: inset 1px 0px 1em rgb(128, 243, 232);
+  max-width: fit-content;
+  background-color: #b7b7b7;
+  border-radius: 32px;
 }
 
 .project-container {
-    position: relative;
-    max-width: 80%;
-    max-height: 80%;
-    background-color: #b7b7b7;
-    filter: brightness(1.2);
-    border-radius: 32px;
-    overflow: auto;
-    display: flex;
-    flex-direction: column;
+  position: relative;
+  max-width: 80%;
+  max-height: 80%;
+  background-color: #b7b7b7;
+  filter: brightness(1.2);
+  border-radius: 32px;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .project-image-project-page {
-    width: 50%;
-    aspect-ratio: 1/2;
-    max-height: 100%;
-    object-fit: contain;
-    border-radius: 24px;
+  width: 50%;
+  aspect-ratio: 1/2;
+  max-height: 100%;
+  object-fit: contain;
+  border-radius: 24px;
 }
 
 .close-button {
-    position: absolute;
-    right: 2%;
-    top: 2%;
-    font-size: 3rem;
-    color: #646cff;
-
+  position: absolute;
+  right: 2%;
+  top: 2%;
+  font-size: 3rem;
+  color: #646cff;
 }
 
 .close-button:hover {
-    color: #535bf2;
-    filter: brightness(1.2);
+  color: #535bf2;
+  filter: brightness(1.2);
 }
 
 .popup-title {
-    color: #646cff;
+  color: #646cff;
 }
 
 .project-body {
-    display: flex;
-    flex-direction: column;
-    padding: 20px 40px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 40px;
 }
 
 .project-content {
-    display: flex;
-    color: #213547;
+  display: flex;
+  color: #213547;
 }
 
 .features-list {
-    list-style-type: none;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.features-list li {
+  padding-left: 1rem;
+  text-indent: -0.75rem;
+}
+
+.features-list li::before {
+    content: '🦪 ';
 }
 
 .popup-header {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .project-links > * {
-    border: 1px solid blue;
+  border: 1px solid blue;
 }
