--- a/src/Components/ProjectPopup/ProjectPopup.css
+++ b/src/Components/ProjectPopup/ProjectPopup.css
@@ -3,8 +3,10 @@
   position: fixed;
   top: 0;
   left: 0;
+  /*
   width: 100%;
   height: 100%;
+  */
   display: flex;
   justify-content: center;
   align-items: center;
