--- a/src/Components/ProjectPopup/ProjectPopup.css
+++ b/src/Components/ProjectPopup/ProjectPopup.css
@@ -1,41 +1,37 @@
 .popup-background {
+    /*
   margin: 50px;
+  */
   position: fixed;
-  top: 0;
-  left: 0;
-  
-  width: 100%;
-  height: 100%;
+  top: 50px;
+  left: 50px;
+  right: 50px;
+  bottom: 50px;
   
   display: flex;
   justify-content: center;
   align-items: center;
+  
   z-index: 999;
   border: 1px solid rgb(128, 243, 232);
   box-shadow: inset 1px 0px 1em rgb(128, 243, 232);
-  max-width: fit-content;
+
   background-color: #b7b7b7;
   border-radius: 32px;
 }
 
 .project-container {
   position: relative;
+  /*
   max-width: 80%;
   max-height: 80%;
+  */
   background-color: #b7b7b7;
   filter: brightness(1.2);
   border-radius: 32px;
   overflow: auto;
   display: flex;
   flex-direction: column;
-}
-
-.project-image-project-page {
-  width: 50%;
-  aspect-ratio: 1/2;
-  max-height: 100%;
-  object-fit: contain;
-  border-radius: 24px;
 }
 
 .close-button {
@@ -58,7 +54,7 @@
 .project-body {
   display: flex;
   flex-direction: column;
-  padding: 20px 40px;
+  padding: 0 40px 16px 40px;
 }
 
 .project-content {
@@ -69,7 +65,7 @@
 .features-list {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 16px 0;
 }
 
 .features-list li {
@@ -83,8 +79,18 @@
 
 .popup-header {
   flex-direction: column;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px 40px;
 }
 
 .project-links > * {
   border: 1px solid blue;
+}
+
+.project-links {
+    padding: 16px 0;
+    display: flex;
+    gap: 16px;
 }
