--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,6 +1,15 @@
 footer {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 56px;
-    margin-bottom: 24px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 56px;
+  margin-bottom: 24px;
+}
+
+@media (max-width: 768px) {
+  footer {
+    flex-direction: column;
+    align-items: center;
+    border-top: 1px solid #646cff;
+    box-shadow: inset 1px 0px 1em #4a94d7;
+  }
 }
