--- a/src/Components/ProjectPopup/ProjectPopup.css
+++ b/src/Components/ProjectPopup/ProjectPopup.css
@@ -3,10 +3,10 @@
   margin: 50px;
   */
   position: fixed;
-  top: 50px;
-  left: 50px;
-  right: 50px;
-  bottom: 50px;
+  top: 24px;
+  left: 24px;
+  right: 24px;
+  bottom: 24px;
 
   display: flex;
   justify-content: center;
@@ -33,14 +33,14 @@
   display: flex;
   flex-direction: column;
 
-  width: 88%;
-  height: 78%;
+  width: 93%;
+  height: 91%;
 }
 
 .close-button {
   position: absolute;
-  right: 2%;
-  top: 2%;
+  right: 5%;
+  top: 5%;
   font-size: 3rem;
   color: #646cff;
   z-index: 5;
@@ -76,7 +76,7 @@
 .features-list li {
   padding-left: 1rem;
   text-indent: -0.75rem;
-  padding-bottom: 8px;
+  padding-bottom: 4px;
 }
 
 .features-list li::before {
@@ -94,7 +94,7 @@
 .project-links > * {
   border: 1px solid #646cff;
   box-shadow: inset 1px 0px 1em #4a94d7;
-  padding: 4px;
+  padding: 4px 8px;
   border-radius: 24px;
 }
 
@@ -107,4 +107,7 @@
 #mimic-octopus {
   display: flex;
   justify-content: flex-end;
+  position: fixed;
+  bottom: 65px;
+  right: 37px;
 }
