side cards mobile test

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -293,6 +293,36 @@ button {
 }
 */
 
+@media (max-width: 768px) {
+  .side-card {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .left-card,
+  .right-card {
+    position: static;
+  }
+
+  .side-card:hover,
+  .left-card:hover,
+  .right-card:hover {
+    left: 0;
+    right: 0;
+  }
+
+  .container {
+    flex-direction: column;
+  }
+
+  /* Side cards should be below */
+  .left-card,
+  .right-card {
+    z-index: 1;
+  }
+}
+
 .bottom-card-title {
   display: flex;
   justify-content: space-between;
