mobile test for side card to be centered

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -310,6 +310,9 @@ button {
   .right-card:hover {
     left: 0;
     right: 0;
+    transform: translate(-50%, -50%); /* Center card */
+    top: 50%; /* Position at middle of viewport */
+    left: 50%; /* Position at middle of viewport */
   }
 
   .container {
