mobile layout wip

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -29,3 +29,9 @@ nav {
 .nav-darkmode {
     align-self: center;
 }
+
+@media (max-width: 768px) {
+    #main-header {
+        margin: 20px;
+    }
+}
