--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -9,7 +9,6 @@ footer {
   footer {
     flex-direction: column;
     align-items: center;
-    border-top: 1px solid #646cff;
-    box-shadow: inset 1px 0px 1em #4a94d7;
+    box-shadow: inset 0 10px 10px -10px #4a94d7;
   }
 }
