--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,13 +2,20 @@ footer {
   display: flex;
   justify-content: space-around;
   margin-top: 56px;
-  margin-bottom: 24px;
+  background: rgb(203, 203, 203);
+  background: linear-gradient(
+    90deg,
+    rgba(203, 203, 203, 1) 0%,
+    rgba(74, 148, 215, 0.7161064254803484) 35%,
+    rgba(128, 243, 232, 1) 100%
+  );
 }
 
 @media (max-width: 768px) {
   footer {
     flex-direction: column;
     align-items: center;
+    margin-bottom: 0;
     box-shadow: inset 0 10px 10px -10px #4a94d7;
     background: rgb(203, 203, 203);
     background: linear-gradient(
