carousel responsiveness fix

--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -9,12 +9,13 @@
 .slide-wrapper {
   display: flex;
   gap: 30px;
-  width: 100%;
+  width: 85vw;
   align-items: flex-start;
   margin: 0 20px;
   overflow-x: scroll;
   scrollbar-width: none;
   overflow-y: hidden;
+  flex-wrap: nowrap;
 }
 
 .slide-button {
