--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -24,6 +24,7 @@
     flex-direction: column;
     gap: 10px;
     padding: 24px;
+    width: 220px;
     /*box-shadow: inset 1px 0px 1em rgb(128, 243, 232);*/
 }
 
