--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: PlayFair Display, 'Cormorant Unicase', Inter, system-ui, Avenir, Helvetica, Arial,
+  font-family: Raleway, 'Cormorant Unicase', Inter, system-ui, Avenir, Helvetica, Arial,
     serif, sans-serif;
   line-height: 1.5;
   font-weight: 400;
